# Archival-Filing-Seal

./: .gitignore  README.md  index.html  package.json  test_config_seal.json  test_schema_seal.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts  方案设计.md
docs/: 方案设计.md
resources/: stamp_pdf.py
scripts/: find_cargo.sh  tauri_build.sh
src/: App.tsx
src-tauri/: Cargo.toml  build.rs  cargo_check_error.txt  cargo_out.txt  stderr.txt  stderr2.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/schemas/: template_kj.json  template_kj_acct.json  template_sx.json  template_ws.json
src-tauri/sql/: schema.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/core/: db.rs  mod.rs  pdf_editor.rs  processor.rs  scanner.rs  vision.rs
src-tauri/src/models/: batch.rs  config.rs  file_info.rs  mod.rs  schema.rs  scheme.rs
src-tauri/src/utils/: coord.rs  mod.rs
src/components/: BatchManager.tsx  FilePreviewTable.tsx  PageNumberPanel.tsx  SealManager.tsx  StampSchemaEditor.tsx  TemplateManager.tsx
src/types/: stamp.ts
